<?xml version="1.0"?>
<package format="2">
  <name>ros_sharp_time_synchronizer</name>
  <version>0.0.0</version>
  <description>The ros_sharp_time_synchronizer package</description>

  <maintainer email="harishanand95@gmail.com">harish</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>image_transport</exec_depend> 
  <exec_depend>cv_bridge</exec_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
